# Tasky-Backend

./: AUTHENTICATION_README.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
todo_app/: admin.py  models.py  serializers.py  urls.py  views.py
todo_app/migrations/: 0001_initial.py  0002_alter_customuser_email_task.py
todo_project/: settings.py  urls.py  wsgi.py
